name:                pipes-unagi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pipes-unagi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Pipes.Unagi
  build-depends:       async
                     , base
                     , monadIO
                     , pipes
                     , transformers
                     , unagi-chan
  default-language:    Haskell2010

executable pipes-unagi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monad-control
                     , pipes-unagi
  default-language:    Haskell2010

test-suite pipes-unagi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monad-control
                     , pipes-unagi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pipes-unagi
